--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,7 +45,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        runner: [ubuntu-latest]
+        runner: [ubuntu-latest,ubuntu-24.04-arm]
     runs-on: ${{ matrix.runner }}
     steps:
       - name: Free Disk-Space
@@ -173,7 +173,7 @@ jobs:
       fail-fast: false
       matrix:
         target: [win64,linux64]
-        variant: [nonfree, nonfree 7.1]
+        variant: [nonfree,nonfree 7.1]
     steps:
       - name: Free Disk-Space
         run: df -h && sudo apt-get clean && docker system prune -a -f && sudo rm -rf /usr/local/lib/android /usr/share/dotnet /opt/ghc && df -h
@@ -237,8 +237,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        target: [win64，linux64]
-        variant: [nonfree, nonfree 7.1]
+        target: [win64,linux64]
+        variant: [nonfree,nonfree 7.1]
     steps:
       - name: Free Disk-Space
         run: df -h && sudo apt-get clean && docker system prune -a -f && sudo rm -rf /usr/local/lib/android /usr/share/dotnet /opt/ghc && df -h
@@ -308,12 +308,12 @@ jobs:
           sleep 15
           gh release create "$TAGNAME" --target "master" --title "$NAME" latest_artifacts/*
         env:
-          GIT_TOKEN: ${{ github.token }}
+          GITHUB_TOKEN: ${{ github.token }}
       - name: Update Wiki
         run: ./util/update_wiki.sh artifacts ${{ steps.create_release.outputs.tag_name }}
         env:
-          GIT_TOKEN: ${{ github.token }}
+          GITHUB_TOKEN: ${{ github.token }}
       - name: Prune old releases
         run: ./util/prunetags.sh
         env:
-          GIT_TOKEN: ${{ github.token }}
+          GITHUB_TOKEN: ${{ github.token }}
