--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,7 +45,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        runner: [Z590]
+        runner: self-hosted
     runs-on: ${{ matrix.runner }}
     steps:
       - name: Free Disk-Space
