--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,7 @@ on:
         default: false
         required: false
   schedule:
-    - cron: '30 1 1,15 * *'
+    - cron: '0 17 */2 * *'
 
 env:
   DOCKER_BUILDKIT: 1
@@ -57,11 +57,10 @@ jobs:
         with:
           buildkitd-config: .github/buildkit.toml
       - name: Login to Docker
-        uses: docker/login-action@v3
+        uses: nick-fields/retry@v3
         with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ github.token }}
+          max_attempts: 10
+          command: docker login ghcr.io -u ${{ github.actor }} -p ${{ github.token }}
       - name: Image Name
         id: imagename
         run: |
@@ -128,11 +127,10 @@ jobs:
         with:
           buildkitd-config: .github/buildkit.toml
       - name: Login to Docker
-        uses: docker/login-action@v3
+        uses: nick-fields/retry@v3
         with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ github.token }}
+          max_attempts: 10
+          command: docker login ghcr.io -u ${{ github.actor }} -p ${{ github.token }}
       - name: Image Name
         id: imagename
         run: |
@@ -184,11 +182,10 @@ jobs:
         with:
           buildkitd-config: .github/buildkit.toml
       - name: Login to Docker
-        uses: docker/login-action@v3
+        uses: nick-fields/retry@v3
         with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ github.token }}
+          max_attempts: 10
+          command: docker login ghcr.io -u ${{ github.actor }} -p ${{ github.token }}
       - name: Image Name
         id: imagename
         run: |
@@ -245,11 +242,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
       - name: Login to Docker
-        uses: docker/login-action@v3
+        uses: nick-fields/retry@v3
         with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ github.token }}
+          max_attempts: 10
+          command: docker login ghcr.io -u ${{ github.actor }} -p ${{ github.token }}
       - name: Build ffmpeg
         run: |
           T="$(echo -n ${{ github.token }} | sha256sum | head -c 64)" && echo -e "::add-mask::${T}\n::stop-commands::${T}"
