--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -363,11 +363,17 @@ jobs:
       - name: Free Disk-Space
         run: df -h && sudo apt-get clean && docker system prune -a -f && df -h
 
+      - name: Create sanitized artifact name slug
+        id: slug
+        run: |
+          VAR_SLUG="${{ matrix.variant }}"
+          echo "variant_slug=${VAR_SLUG// /-}" >> $GITHUB_OUTPUT
+
       - name: Download FFmpeg artifact
         uses: actions/download-artifact@v4
         with:
           # 根据 target 和 variant 构造 artifact 的名字
-          name: ffmpeg-${{ matrix.target }}-${{ replace(matrix.variant, ' ', '-') }}
+          name: ffmpeg-${{ matrix.target }}-${{ steps.slug.outputs.variant_slug }}
           path: ./ffmpeg-artifact
 
       - name: Prepare package structure and metadata
@@ -419,8 +425,9 @@ jobs:
       - name: Upload .deb package artifact
         uses: actions/upload-artifact@v4
         with:
-          name: ffmpeg-deb-${{ matrix.target }}-${{ replace(matrix.variant, ' ', '-') }}
+          name: ffmpeg-deb-${{ matrix.target }}-${{ steps.slug.outputs.variant_slug }}
           path: "*.deb"
           overwrite: true
+
 
 
